syntax = "proto3";

// buf:lint:ignore PACKAGE_DIRECTORY_MATCH
// buf:lint:ignore PACKAGE_VERSION_SUFFIX
package alchemy.codec.internal.testpb;

option go_package = "codec/internal/testpb";


message Proto3Message {
  Proto3Message nested_value = 999;
  string string_value = 1;
  int32 int32_value = 2;
  int64 int64_value = 3;
  bool bool_value = 4;
  float float_value = 5;
  double double_value = 6;
  repeated string repeated_string = 7;
  repeated string repeated_int32 = 8;
}
